added education loan

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Home Loan Calculator Hub</title>
+<title>Financial Calculator</title>
 <meta name="description" content="Free calculators: EMI, prepayment, affordability, balance transfer. Mobile-friendly and detailed schedules.">
 <meta name="theme-color" content="#0ea5e9">
 <link rel="manifest" href="manifest.webmanifest">
@@ -17,7 +17,7 @@
   </div>
   <nav class="navbar">
     <div class="container nav-wrap">
-      <div class="brand">Loan Tools</div>
+      <div class="brand">Financial Calculator</div>
       <button class="nav-toggle" aria-label="Toggle menu" onclick="document.body.classList.toggle('nav-open')">☰</button>
       <ul class="nav-links">
         <li><a href="index.html" aria-current="page">Home</a></li>
@@ -25,38 +25,43 @@
         <li><a href="pages/prepayment.html">Prepayment</a></li>
         <li><a href="pages/affordability.html">Affordability</a></li>
         <li><a href="pages/balance-transfer.html">Balance Transfer</a></li>
+        <li><a href="pages/education.html">Education</a></li>
       </ul>
     </div>
   </nav>
 
   <header>
     <div class="container">
-      <h1>Home Loan Calculator Hub</h1>
-      <p>Accurate, mobile-friendly calculators: EMI, prepayment strategies, affordability, and balance transfer.</p>
+      <h1>🏠 Financial Calculator</h1>
+      <p>Professional-grade calculators for EMI, prepayment strategies, affordability analysis, and balance transfer comparisons. Built for accuracy and ease of use.</p>
     </div>
   </header>
 
   <main>
     <section class="cards container">
       <a class="card card-link" href="pages/emi.html">
-        <h2>EMI Calculator</h2>
-        <p>Compute EMI and full amortization schedule.</p>
+        <h2>💰 EMI Calculator</h2>
+        <p>Calculate monthly EMI payments and generate detailed amortization schedules with interest breakdowns.</p>
       </a>
       <a class="card card-link" href="pages/prepayment.html">
-        <h2>Prepayment Calculator</h2>
-        <p>Model reduce tenure or reduce EMI strategies with recurring prepayments.</p>
+        <h2>⚡ Prepayment Calculator</h2>
+        <p>Optimize your loan with reduce tenure or reduce EMI strategies using one-time or recurring prepayments.</p>
       </a>
       <a class="card card-link" href="pages/affordability.html">
-        <h2>Affordability</h2>
-        <p>Estimate eligible loan using FOIR/DTI based on your income and liabilities.</p>
+        <h2>📊 Affordability Calculator</h2>
+        <p>Determine your maximum eligible loan amount based on income, existing EMIs, and FOIR/DTI ratios.</p>
       </a>
       <a class="card card-link" href="pages/balance-transfer.html">
-        <h2>Balance Transfer</h2>
-        <p>Compare current loan vs new lender and find savings and break-even.</p>
+        <h2>🔄 Balance Transfer</h2>
+        <p>Compare your current loan with new lender offers to find potential savings and break-even points.</p>
+      </a>
+      <a class="card card-link" href="pages/education.html">
+        <h2>🎓 Education Loan</h2>
+        <p>Calculate education loan EMI with moratorium period, optional payments during study, and prepayment strategies.</p>
       </a>
     </section>
     <footer>
-      <div>Built for everyone. Works offline in your browser.</div>
+      <div>✨ Built for everyone. Works offline in your browser. No data collection, no tracking.</div>
     </footer>
   </main>
   <script type="module">
