--- a/pages/balance-transfer.html
+++ b/pages/balance-transfer.html
@@ -17,7 +17,7 @@
   </div>
   <nav class="navbar">
     <div class="container nav-wrap">
-      <div class="brand">Loan Tools</div>
+      <div class="brand">Financial Calculator</div>
       <button class="nav-toggle" aria-label="Toggle menu" onclick="document.body.classList.toggle('nav-open')">☰</button>
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
@@ -25,6 +25,7 @@
         <li><a href="./prepayment.html">Prepayment</a></li>
         <li><a href="./affordability.html">Affordability</a></li>
         <li><a href="./balance-transfer.html" aria-current="page">Balance Transfer</a></li>
+        <li><a href="./education.html">Education</a></li>
       </ul>
     </div>
   </nav>
