--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <link rel="manifest" href="manifest.webmanifest">
 <link rel="icon" href="favicon.svg" type="image/svg+xml">
 <link rel="stylesheet" href="styles.css">
+<link rel="canonical" href="https://yashpal-0.github.io/Financial-Calculator/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Financial Calculator">
+<meta property="og:description" content="Free calculators: EMI, prepayment, affordability, balance transfer. Mobile-friendly and detailed schedules.">
+<meta property="og:url" content="https://yashpal-0.github.io/Financial-Calculator/">
+<meta property="og:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Financial Calculator">
+<meta name="twitter:description" content="Free calculators: EMI, prepayment, affordability, balance transfer. Mobile-friendly and detailed schedules.">
+<meta name="twitter:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
 </head>
 <body>
   <div class="container" style="display:flex;justify-content:flex-end;gap:8px;padding-top:8px;">
@@ -38,6 +48,14 @@
   </header>
 
   <main>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Financial Calculator",
+      "url": "https://yashpal-0.github.io/Financial-Calculator/"
+    }
+    </script>
     <section class="cards container">
       <a class="card card-link" href="pages/emi.html">
         <h2>💰 EMI Calculator</h2>
@@ -61,7 +79,7 @@
       </a>
     </section>
     <footer>
-      <div>✨ Built for everyone. Works offline in your browser. No data collection, no tracking.</div>
+      <div>✨ Built for everyone. Works offline in your browser. No data collection, no tracking. · <a href="https://www.linkedin.com/in/yashpal-yadav-990278221/" target="_blank" rel="me noopener">LinkedIn</a></div>
     </footer>
   </main>
   <script type="module">
