--- a/pages/education.html
+++ b/pages/education.html
@@ -9,6 +9,16 @@
 <link rel="manifest" href="../manifest.webmanifest">
 <link rel="icon" href="../favicon.svg" type="image/svg+xml">
 <link rel="stylesheet" href="../styles.css">
+<link rel="canonical" href="https://yashpal-0.github.io/Financial-Calculator/pages/education.html">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Education Loan Calculator">
+<meta property="og:description" content="Education loan calculator with moratorium period, optional payments during moratorium, and prepayment options.">
+<meta property="og:url" content="https://yashpal-0.github.io/Financial-Calculator/pages/education.html">
+<meta property="og:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Education Loan Calculator">
+<meta name="twitter:description" content="Education loan calculator with moratorium period, optional payments during moratorium, and prepayment options.">
+<meta name="twitter:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
 </head>
 <body>
   <div class="container" style="display:flex;justify-content:flex-end;gap:8px;padding-top:8px;">
@@ -136,7 +146,7 @@
     </section>
 
     <footer class="container">
-      <div>Built for everyone. Works offline in your browser.</div>
+      <div>Built for everyone. Works offline in your browser. · <a href="https://www.linkedin.com/in/yashpal-yadav-990278221/" target="_blank" rel="me noopener">LinkedIn</a></div>
     </footer>
   </main>
 
